see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

13-Dec-2010 Ian MacLennan
 # [#22751] errors in javascript form validation and combobox.js

13-Dec-2010 Christophe Demko
 # adding a jimport in uri.php (it uses JString::parse_url)
 # [#23407] Add option which day should be the first day of the week (Dennis Hermatski)
 # [#23748] languagefilter causes double content on www.example.com/ and www.example.com/en/ (Mark Visser)

13-Dec-2010 Jean-Marie Simonet
 $# [#23747] Fix UI for blog layouts. Thanks Elin.
 # Fixing some hardcoded colons
 $ Normalizing some language strings, Correcting typos.

13-Dec-2010 Mark Dexter
# [#23377] Version information disclosure in joomla.xml
# Sample data fixes (Elin Waring)
# Better fix for installation error with [#23745] (Sam Moffatt)

12-Dec-2010 Mark Dexter
# [#23741] Menu -> Content -> Featured Articles gives error 500
^ [#22758] Controlling module parameters for <jdoc:include type="module" /> (Dennis Hermatski)
# [#22531] Private Message recipient not checking for backend access
^ [#23745] Add a system plugin event called onBeforeCompileHead (Louis Landry)
# [#23737] Number of list results not taken into account on listing view
# [#22097] Records in #__session aren't deleted after user's logout; Joomla checks #__session too often (Dennis Hermatski)
# [#21138] Article manager - no filter on created by (Roland Dalmulder)
# [#23728] Content of the mail from is not retained if an error occurs
# [#23725] Duplicate contradicting messages on send mail error
# [#23696] Menus creation fail with 1.5-style menus metadata: using SimpleXMLElement attributes missing (string) typecast (Beat)